<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="14dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editTextWorkerFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/hintWorkerFirst"/>

    <EditText
        android:id="@+id/editTextWorkerLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hintWorkerLast"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <Button
            android:id="@+id/buttonCancelWorker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancelText"/>

        <Button
            android:id="@+id/buttonSaveWorker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSaveText"/>

    </LinearLayout>



</LinearLayout>