<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobWorkerActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/textViewTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:src="@drawable/ic_add_circle"
        />

    <Button
        android:id="@+id/buttonCreateJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonCreateJob"
        android:layout_weight="0.2"
        style="@style/buttonMainStyle"/>

    <Button
        android:id="@+id/buttonCreateWorker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonCreateWorker"
        android:layout_weight="0.2"
        style="@style/buttonMainStyle"/>

    <TextView
        android:id="@+id/textViewBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/bottomBarText"
        style="@style/bottomBarStyle"/>


</LinearLayout>